qnd12_arch_2/qnd12_app_pro/templates/postgresql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartquaildb
  labels:
    app: smartquaildb
spec:
  type: ExternalName
  externalName: smartquaildb.postgres.svc.cluster.local
  ports:
  - port: 5432
    protocol: TCP
