qnd12_arch_2/qnd12_app_pro/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnd12-app-ingress
  namespace: qnd12-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: ingress-nginx
  rules: 
    - http:
       paths:
         - pathType: Prefix
           path: "/"
           backend:
             service:
               name: qnd12-pro-service
               port:
                 number: 80
